finish all update
