# src/models/userType.js
@@ -1,0 +1,8 @@
+const UserTypeEnum = {
+  OFFICIER: "Officier",
+  SOUS_OFFICIER: "Sous-Officier",
+  CAPORAL: "Caporal",
+  SOLDAT: "Soldat",
+};
+
+module.exports = UserTypeEnum;
